# algo-trading

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
algotrading/db/: polygon_client.py  s3_client.py
notebooks/: 01_polygon_exploration.ipynb  02_universe_eda.ipynb
scripts/: backfill.py
