[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "algotrading"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "polygon-api-client",
    "boto3",
    "pyarrow",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["algotrading*"]
